refactor(resource-service): rewrite to use resource and fileentry (#2023)
* wip

* more fixes

* more fixes

* more fixes

* fix publication summary

* work in progress

* fixed publication-commons tests

* work in progress

* more fixing

* fixing brage-import

* fixing cristin-import and tickets

* fixes

* fixing event handlers

* fix test in ResourceServiceTest

* fixing publication-rest

* expose more failing tests

* work in progress

* fetching publication from database in expansion

* fix update publication

* fixing deletion

* restore documentation

* removed SHOULD_USE_NEW_FILES

* fixing tests

* fixing switch statement

* qa in progress

* qa finished

* fixing termination of files

* qa

---------

Co-authored-by: Kir Truhacev <kir.truhacev@sikt.no>