@@ -24,6 +24,7 @@ import java.util.stream.Collectors;
 import no.unit.nva.identifiers.SortableIdentifier;
 import no.unit.nva.model.Publication;
 import no.unit.nva.model.additionalidentifiers.AdditionalIdentifier;
+import no.unit.nva.publication.model.PublicationSummary;
 import no.unit.nva.publication.model.business.Resource;
 import no.unit.nva.publication.model.business.UserInstance;
 import no.unit.nva.publication.model.storage.Dao;
@@ -35,7 +36,7 @@ public class ReadResourceService {
 
     public static final String PUBLICATION_NOT_FOUND_CLIENT_MESSAGE = "Publication not found: ";
 
-    public static final String RESOURCE_NOT_FOUND_MESSAGE = "Could not find resource";
+    public static final String RESOURCE_NOT_FOUND_MESSAGE = "Could not find resource ";
     public static final int DEFAULT_LIMIT = 100;
     private static final String ADDITIONAL_IDENTIFIER_CRISTIN = "Cristin";
     private final AmazonDynamoDB client;
@@ -46,18 +47,14 @@ public class ReadResourceService {
         this.tableName = tableName;
     }
 
-    public Publication getPublication(Publication publication) throws NotFoundException {
-        return getResource(Resource.fromPublication(publication)).toPublication();
-    }
-
-    public List<Publication> getResourcesByOwner(UserInstance userInstance) {
+    public List<PublicationSummary> getResourcesByOwner(UserInstance userInstance) {
         var partitionKey = constructPrimaryPartitionKey(userInstance);
         var querySpec = partitionKeyToQuerySpec(partitionKey);
         var valuesMap = conditionValueMapToAttributeValueMap(querySpec.getValueMap(), String.class);
         var namesMap = querySpec.getNameMap();
         var result = performQuery(querySpec.getKeyConditionExpression(), valuesMap, namesMap, DEFAULT_LIMIT);
 
-        return queryResultToListOfPublications(result);
+        return queryResultToListOfPublicationSummaries(result);
     }
 
     public Resource getResourceByIdentifier(SortableIdentifier identifier) throws NotFoundException {
@@ -117,7 +114,14 @@ public class ReadResourceService {
         return queryResultToResourceList(result)
                    .stream()
                    .map(Resource::toPublication)
-                   .collect(Collectors.toList());
+                   .toList();
+    }
+
+    private List<PublicationSummary> queryResultToListOfPublicationSummaries(QueryResult result) {
+        return queryResultToResourceList(result)
+                   .stream()
+                   .map(Resource::toSummary)
+                   .toList();
     }
 
     private QueryResult performQuery(String conditionExpression, Map<String, AttributeValue> valuesMap,
